admin添加教练信息功能(记得token需要重新在根目录设置)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ xunji:
   jwt:
     admin-secret-key: xunji
     admin-ttl: 7200000
-    admin-token-name: token
+    admin-token-name: tokenadmin
     user-secret-key: itcast
     user-token-name: token
     user-ttl: 7200000
